--- a/index.html
+++ b/index.html
@@ -36,5 +36,31 @@
   <div id="map" style="height:400px;"></div>
 
   <script src="script.js"></script>
+
+  <!-- OneSignal SDK -->
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function() {
+      OneSignal.init({
+        appId: "MASUKKAN_APP_ID_ANDA_DI_SINI", // Ganti dengan App ID OneSignal kamu
+        notifyButton: {
+          enable: true // tombol subscribe otomatis muncul
+        },
+        welcomeNotification: {
+          "title": "Fadil's Org App",
+          "message": "Thanks for subscribing!"
+        }
+      });
+    });
+
+    // Fungsi minta izin manual dari tombol
+    function mintaIzinNotifikasi() {
+      OneSignal.push(function() {
+        OneSignal.showSlidedownPrompt(); // memunculkan prompt izin push
+      });
+    }
+  </script>
+
 </body>
 </html>
